{
    "name": "CameraInput",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "308dfa03-37d9-45c4-8dda-3ab2705b4179",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Value",
                    "id": "45b6aa8f-b2ae-4e8a-8fc0-c594df5b8fab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "c9dbc14e-d809-4621-afb3-364fda0018bd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a6b64728-dc8f-4e0c-95ed-c38640a655f7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ffd7ae31-dd2f-4317-82ca-e115bd24a5df",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d5eaa33f-9b98-487d-94ff-843a619ffc13",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "519e2ddb-9263-42ea-b3fa-a63f3b182d71",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e7aa1756-fe4a-4739-9734-b1d80b66a4ca",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraActions",
            "id": "58aba299-9f6f-4f45-9a3d-6d96a1b88fb3",
            "actions": [
                {
                    "name": "FocusOnPlayer",
                    "type": "Button",
                    "id": "146193b9-6005-4da9-8d1f-25b696ae0651",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f1244b6-0ab0-4401-a88d-63f5b6c284e5",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f3977a0-8c6a-4e75-8c5e-161742188c6d",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "FocusOnPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraZooming",
            "id": "340f1d5a-b413-456d-a8bb-39c70f8efc40",
            "actions": [
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "171dddf9-5c42-476e-aaa2-d55bc85461c0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8defd64f-65ce-4675-b0fc-2b1dec7f22a7",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "d3330fc7-af8c-4586-a2d3-090e9e81a2b1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e0ec1ca5-9df6-4ccd-b6c2-76eb42c49acf",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2fc0b9d0-7a92-4b79-8029-e6ab6b583d8a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "e28919b5-80a9-4ba1-80ce-96c881be1f6b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Clamp(min=-2,max=2)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fac20ca9-b00c-48ed-9eed-f16f21973086",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "32f4cc1b-2fee-4ee5-9d51-9433aa1984d4",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CameraRotation",
            "id": "1e68dcde-c0be-4e9a-9c9b-64f8ace26eaf",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "c5509cc4-23b3-4fcd-a0fb-644755704479",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "789dca9b-6ff9-4d3b-a478-77aa4934c36a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "10a7c036-13bb-470d-af96-5f02e9a55f10",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f23b24e5-23b4-4d44-855c-bd9fed95b18e",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "80dd9ff0-600b-4fd9-a4ee-eee5ce19ad17",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7e46fb19-8d0c-4150-a0b4-a29f64fdea27",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "84184ceb-2c03-4bf9-9694-a019169a2e6a",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}